first donet added

--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ body {
 
 
 #donat {
-    background-image: url(image/donation7.jpg);
+    background-image: url(image/poor.jpg);
     height: 460px;
+
     background-repeat: no-repeat;
 
 }
