--- a/style.css
+++ b/style.css
@@ -39,3 +39,48 @@ body {
     border-radius: 5PX;
     font-size: medium;
 }
+
+#dt {
+    text-align: center;
+    font-size: 50px;
+}
+
+#today {
+    text-align: center;
+}
+
+.tk {
+    display: inline;
+    height: 150px;
+    width: 150px;
+    margin: 100px;
+    text-align: center;
+    font-size: 20px;
+}
+
+#tow {
+    background-color: rgb(243, 186, 178);
+    height: 30px;
+    width: 70px;
+    border: 3px solid red;
+    margin: 50px;
+    text-align: center;
+}
+
+#amount {
+    text-align: center;
+    color: rgb(200, 199, 199);
+}
+
+#odp {
+    text-align: center;
+    font-size: 50px;
+}
+
+#weare {
+    text-align: center;
+}
+
+#wearee {
+    text-align: center;
+}
