--- a/style.css
+++ b/style.css
@@ -186,3 +186,32 @@ body {
     border-radius: 5PX;
     font-size: medium;
 }
+
+#get {
+    font-size: 40px;
+    text-align: center;
+}
+
+.We-will {
+    text-align: center;
+}
+
+#input-one {
+    text-align: center;
+}
+
+#subscribe {
+    background-color: rgb(255, 160, 17);
+}
+
+footer {
+    text-align: center;
+    color: aliceblue;
+    background-color: black;
+    height: 180px;
+}
+
+#color {
+    color: chocolate;
+    font-family: cursive;
+}
